--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </tr>
 </table>
 <hr>
-  <a href="My Hoppies.html">My Hoppies</a>
+  <a href="My hoppies.html">My Hoppies</a>
   <a href="contact me.html">Contact Me</a>
   <hr size="5" noshade>
 
