--- a/index.html
+++ b/index.html
@@ -3,72 +3,86 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Web Development Exercise">
-  <title>😎 Mohammed's Personal Site 😎</title>
+  <title>Mohammed Alshikhi</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="messi.png" alt="Messi"></td>
-      <td><h1>Mohammed Alzahrani</h1>
-      <p><em><strong>Unemployeed</strong></em></p>
-      <p>Web Developer</p></td>
-    </tr>
-  </table>
+  <div class="top">
+    <img class="t-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Mohammed.</h1>
+    <h2>a <span>Web </span>Developer.</h2>
+    <img class="b-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle">
+    <div class="profile">
+      <img class="Me" src="https://image.flaticon.com/icons/svg/149/149071.svg" alt="">
+      <h2>Education</h2>
+      <h3>University of Jeddah 2012 - 2017</h3>
+      <h3>Bachelor degree in Information System.</h3>
+      <h3>GPA: 3.59 - 5</h3>
+      <hr>
+    </div>
+    <h2>Work Experience</h2>
+    <table class="table" cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+          <th>city</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2016</td>
+          <td>Saudi Airlines</td>
+          <td>Jeddah</td>
+        </tr>
+        <tr>
+          <td>2019</td>
+          <td>Mobily</td>
+          <td>Jeddah</td>
+        </tr>
+      </tbody>
+      <tfoot>
+      </tfoot>
+    </table>
+    <hr>
+    <h2>Skills</h2>
+    <table class="table" cellspacing="10">
+      <tr>
+        <td>MS: Word,Excel,Powerpoint</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Networking</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </table>
+  </div>
+  <div class="bottom">
+    <h2>Get In Touch</h2>
+    <a href="https://www.linkedin.com/">
+      <img class="contact-icons" src="https://image.flaticon.com/icons/svg/185/185964.svg" alt="LinkedIn">
+    </a>
+    <a href="mailto:malshikhi107@gmail.com">
+      <img class="contact-icons" src="https://image.flaticon.com/icons/svg/270/270021.svg" alt="My Email">
+    </a><br>
+      <a class="btn" href="mailto:malshikhi107@gmail.com">contact me</a>
+    <p>© 2020 Mohammed Alzahrani.</p>
+  </div>
 
-  <hr size="5" noshade>
 
-  <h3>Education</h3>
-  <ul>
-    <li>Ibn Khaldon High School</li>
-    <li><a href="https://www.uj.edu.sa/">University of Jeddah</a></li>
-  </ul>
-<hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-        <th>city</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2016</td>
-        <td>Saudi Airlines</td>
-        <td>Jeddah</td>
-      </tr>
-      <tr>
-        <td>2019</td>
-        <td>Mobily</td>
-        <td>Jeddah</td>
-      </tr>
-    </tbody>
-    <tfoot>
-    </tfoot>
-  </table>
-<hr>
-<h3>Skills</h3>
-<table cellspacing="10">
-  <tr>
-    <td>MS: Word,Excel,Powerpoint</td>
-    <td>⭐⭐⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Networking</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Web Development</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-</table>
-<hr>
-  <a href="My hoppies.html">My Hoppies</a>
-  <a href="contact me.html">Contact Me</a>
-  <hr size="5" noshade>
+
+
+  </div>
 
 </body>
 
